[gd_scene load_steps=63 format=2]

[ext_resource path="res://dialog_assets/number_entry.png" type="Texture" id=1]
[ext_resource path="res://dialog_assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://dialog_assets/inspect_box.png" type="Texture" id=3]
[ext_resource path="res://Password4.gd" type="Script" id=4]
[ext_resource path="res://dialog_assets/planet_island.png" type="Texture" id=5]
[ext_resource path="res://dialog_assets/coordinate_marker.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.99999, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 1600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 1700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 1800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 1900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 2000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 2100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 2200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 2300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 2400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 2500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 2600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 2700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 2800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 2900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 3000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 3100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 3200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 3300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 3400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 3500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 3600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 3700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 3800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 3900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 4000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 4100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 4200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 5 )
region = Rect2( 4300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 5 )
region = Rect2( 4400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 5 )
region = Rect2( 4500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 5 )
region = Rect2( 4600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 5 )
region = Rect2( 4700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 5 )
region = Rect2( 4800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 5 )
region = Rect2( 4900, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=56]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="Node2D" type="Node2D"]
pause_mode = 2
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 4 )

[node name="inspect_box" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="inspect_box2" type="Sprite" parent="."]
position = Vector2( 92.8, 17.6 )
scale = Vector2( 0.275, 0.472222 )
texture = ExtResource( 3 )
centered = false

[node name="box1" type="Sprite" parent="."]
position = Vector2( 64, 95.2 )
texture = ExtResource( 1 )
hframes = 12

[node name="1" type="Area2D" parent="box1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box1/1"]
shape = SubResource( 1 )

[node name="box2" type="Sprite" parent="."]
position = Vector2( 96, 95.2 )
texture = ExtResource( 1 )
hframes = 12

[node name="2" type="Area2D" parent="box2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box2/2"]
shape = SubResource( 2 )

[node name="box3" type="Sprite" parent="."]
position = Vector2( 128, 95.2 )
texture = ExtResource( 1 )
hframes = 12

[node name="3" type="Area2D" parent="box3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box3/3"]
shape = SubResource( 3 )

[node name="box4" type="Sprite" parent="."]
position = Vector2( 160, 95.2 )
texture = ExtResource( 1 )
hframes = 12

[node name="4" type="Area2D" parent="box4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box4/4"]
shape = SubResource( 4 )

[node name="arrow" type="Sprite" parent="."]
position = Vector2( 192, 95.2 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="arrow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arrow/Area2D"]
shape = SubResource( 5 )

[node name="planet_island" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 128, 52 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 56 )
frame = 9
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="coordinate_marker" type="Sprite" parent="."]
position = Vector2( 128, 52 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[connection signal="input_event" from="box1/1" to="." method="_on_1_input_event"]
[connection signal="input_event" from="box2/2" to="." method="_on_2_input_event"]
[connection signal="input_event" from="box3/3" to="." method="_on_3_input_event"]
[connection signal="input_event" from="box4/4" to="." method="_on_4_input_event"]
[connection signal="input_event" from="arrow/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
